<resources>
    <string name="app_name">CoachApp</string>
    <string name="client_name_hint">Ім\'я клієнта</string>
    <string name="next_button">ДАЛі</string>
    <string name="back_button">НАЗАД</string>
    <string name="training_price">100</string>
    <string name="training_price_text">Ціна за тренування</string>
    <string name="client_price_hint">Введіть ціну…</string>
    <string name="client_date_text">Оберіть дату та час</string>
    <string name="client_price_text">Ціна тренування</string>
    <string name="confirm_button">ПІДТВЕРДИТИ</string>
    <string name="schedule_text">Розклад</string>
    <string name="new_client_text">Новий клієнт</string>
    <string name="new_income_text">Нова оплата</string>
    <string name="new_note_text">Створити новий запис</string>
    <string name="history_text">Журнал</string>
    <string name="statistics_text">Статистика</string>
    <string name="opened_diary_text">Переглянути щоденник</string>
    <string name="notes">Записи</string>
    <string name="select_client_text">Оберіть клієнта</string>
    <string name="select_date_text">Дата та час</string>
    <string name="journal_empty_text">Журнал оплат пустий</string>
    <string name="diary_empty_text">Щоденник ще немає записів</string>
    <string name="income_text">Оплата</string>
    <string name="client_incomes">Оплати</string>
    <string name="current_date_text">Поточна дата</string>
    <string name="enter_client_name_text">Введіть ім\'я клієнта</string>
    <string name="diary_text">Щоденник</string>
    <string name="client_text">Клієнти</string>
    <string name="money_text">Оплати</string>
    <string name="total">Всього:</string>
    <string name="today_text">Сьогодні</string>
    <string name="later_text">Пізніше</string>
    <string name="extra_button_delete_client_text">Видалити</string>
    <string name="extra_button_send_client">Надіслати</string>
    <dimen name="next_button_corner_radius">50dp</dimen>
    <dimen name="next_button_pressed_glow_size">25dp</dimen>
    <dimen name="next_button_unpressed_glow_size">20dp</dimen>
    <dimen name="next_button_layout_width">200dp</dimen>
    <dimen name="next_button_layout_height">80dp</dimen>
    <dimen name="back_button_corner_radius">50dp</dimen>
    <dimen name="back_button_pressed_glow_size">25dp</dimen>
    <dimen name="back_button_unpressed_glow_size">20dp</dimen>
    <dimen name="back_button_layout_width">200dp</dimen>
    <dimen name="back_button_layout_height">80dp</dimen>
</resources>