<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/client_photo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:background="@drawable/bordered_frame"
                android:contentDescription="something"
                android:padding="20dp"
                android:src="@drawable/client" />

            <TextView
                android:id="@+id/client_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/client_photo"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:textColor="#6EBFFF"
                android:textSize="28sp" />

            <FrameLayout
                android:id="@+id/client_notes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/client_name"
                android:background="@drawable/bordered_frame"
                android:padding="20dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:id="@+id/client_notes_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/notes_history_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/notes"
                        android:textColor="#BFBFBF"
                        android:textSize="24sp" />

                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/client_notes"
                android:background="@drawable/bordered_frame"
                android:padding="20dp">

                <LinearLayout
                    android:id="@+id/client_incomes_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/incomes_history_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/client_incomes"
                        android:textColor="#BFBFBF"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/client_incomes_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textColor="#BFBFBF"
                        android:textSize="20sp" />

                </LinearLayout>
            </FrameLayout>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>